[TTG] fix get movies
